- fixed unit tests that I broke - introduced specific applicationContext for testing (tilesconfigurer issue) - reminder to use http://localhost:8080/demo/app as url